--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
