--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.1",
     "recharts": "^2.1.9",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
